--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="center-box">
         <div id="name-box">
-            <h1><a href="https://github.com/An0nym0us-sh">anonsh</a></h1>
+            <h1><a href="https://github.com/ua16">anonsh/ua16</a></h1>
         </div>
     </div>
     <div id="link-list">
